Migrate all plugins from Bukkit FileConfiguration to ConfigLib
Replace Bukkit's YAML configuration system with ConfigLib for type-safe
configuration management across all three plugins:

- PistonChat: Add PistonChatConfig with typed fields for whisper settings,
  MySQL config, chat formats, prefixes, and messages
- PistonMute: Add PistonMuteConfig with shadowMute field
- PistonFilter: Add PistonFilterConfig with all filter settings

Benefits:
- Type-safe configuration access (no more getString/getInt calls)
- Auto-generated config files with comments from @Comment annotations
- Automatic config updates when new fields are added
- Cleaner code with direct field access

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>