@@ -3,19 +3,16 @@ package net.pistonmaster.pistonfilter.commands;
 import lombok.RequiredArgsConstructor;
 import net.md_5.bungee.api.ChatColor;
 import net.pistonmaster.pistonfilter.PistonFilter;
+import net.pistonmaster.pistonfilter.config.PistonFilterConfig;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabExecutor;
-import org.bukkit.configuration.file.FileConfiguration;
 import org.bukkit.util.StringUtil;
 
-import java.io.File;
-import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @RequiredArgsConstructor
@@ -26,20 +23,17 @@ public class FilterCommand implements CommandExecutor, TabExecutor {
   public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
     if (sender.hasPermission("pistonfilter.admin") && args.length > 0) {
       if ("reload".equalsIgnoreCase(args[0])) {
-        plugin.reloadConfig();
+        plugin.loadConfig();
         sender.sendMessage(ChatColor.GOLD + "Reloaded the config!");
       }
 
       if ("add".equalsIgnoreCase(args[0]) && args.length > 1) {
-        FileConfiguration config = plugin.getConfig();
+        PistonFilterConfig config = plugin.getPluginConfig();
 
-        config.set("banned-text", Stream.concat(plugin.getConfig().getStringList("banned-text").stream(), Stream.of(args[1])).collect(Collectors.toList()));
+        List<String> newBannedText = Stream.concat(config.bannedText.stream(), Stream.of(args[1])).toList();
+        config.bannedText = newBannedText;
 
-        try {
-          config.save(new File(plugin.getDataFolder(), "config.yml"));
-        } catch (IOException e) {
-          plugin.getLogger().warning("Failed to save config: " + e.getMessage());
-        }
+        plugin.saveConfig(config);
 
         sender.sendMessage(ChatColor.GOLD + "Successfully added the config entry!");
       }
